--- a/1. Two Sum.ipynb
+++ b/1. Two Sum.ipynb
@@ -69,7 +69,122 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original: left = 0, right = 5\n",
+      "( (nums[left] = 1) + (nums[right] = 7) = 8 ) > ( target = 6 )\n",
+      "new: left = 0, right = 4\n",
+      "\n",
+      "original: left = 0, right = 4\n",
+      "( (nums[left] = 1) + (nums[right] = 6) = 7 ) > ( target = 6 )\n",
+      "new: left = 0, right = 3\n",
+      "\n",
+      "original: left = 0, right = 3\n",
+      "( (nums[left] = 1) + (nums[right] = 4) = 5 ) < ( target = 6 )\n",
+      "new: left = 1, right = 3\n",
+      "\n",
+      "end: ( (nums[left] = 2) + (nums[right] = 4) = 6 ) == ( target = 6 )\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution(object):\n",
+    "    def twoSum(self, nums, target):\n",
+    "        nums1 = nums.copy()\n",
+    "        nums = sorted(nums)\n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "        while (nums[left] + nums[right]) != target:\n",
+    "            print(f\"original: left = {left}, right = {right}\")\n",
+    "            if (nums[left] + nums[right]) > target:\n",
+    "                print(f\"( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) > ( target = {target} )\")\n",
+    "                right -= 1\n",
+    "            else:\n",
+    "                print(f\"( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) < ( target = {target} )\")\n",
+    "                left += 1\n",
+    "            print(f\"new: left = {left}, right = {right}\\n\")\n",
+    "\n",
+    "\n",
+    "        print(f\"end: ( (nums[left] = {nums[left]}) + (nums[right] = {nums[right]}) = {(nums[left] + nums[right])} ) == ( target = {target} )\")\n",
+    "        \n",
+    "        res = []\n",
+    "        for i in range(len(nums1)):\n",
+    "            if (nums[left] == nums1[i]) or (nums[right] == nums1[i]):\n",
+    "                res.append(i)\n",
+    "                \n",
+    "        return res\n",
+    "\n",
+    "nums = [1, 4, 2, 7, 3, 6]\n",
+    "target = 6\n",
+    "Solution().twoSum(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<< sort values >>\n",
+      "\n",
+      "left = [1, 4, 2], right = [7, 3, 6]\n",
+      "\n",
+      "left = [1], right = [4, 2]\n",
+      "\n",
+      "left = [4], right = [2]\n",
+      "merge_list = [2, 4]\n",
+      "merge_list = [1, 2, 4]\n",
+      "\n",
+      "left = [7], right = [3, 6]\n",
+      "\n",
+      "left = [3], right = [6]\n",
+      "merge_list = [3, 6]\n",
+      "merge_list = [3, 6, 7]\n",
+      "merge_list = [1, 2, 3, 4, 6, 7]\n",
+      "\n",
+      "<< find index >>\n",
+      "original: left = 0, right = 5\n",
+      "( (nums[left] = 1) + (nums[right] = 7) = 8 ) > ( target = 6 )\n",
+      "new: left = 0, right = 4\n",
+      "\n",
+      "original: left = 0, right = 4\n",
+      "( (nums[left] = 1) + (nums[right] = 6) = 7 ) > ( target = 6 )\n",
+      "new: left = 0, right = 3\n",
+      "\n",
+      "original: left = 0, right = 3\n",
+      "( (nums[left] = 1) + (nums[right] = 4) = 5 ) < ( target = 6 )\n",
+      "new: left = 1, right = 3\n",
+      "\n",
+      "end: ( (nums[left] = 2) + (nums[right] = 4) = 6 ) == ( target = 6 )\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Solution(object):\n",
     "    def twoSum(self, nums, target):\n",
@@ -130,63 +245,9 @@
     "            if (nums[left] == nums1[i]) or (nums[right] == nums1[i]):\n",
     "                res.append(i)\n",
     "                \n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<< sort values >>\n",
-      "\n",
-      "left = [1, 4, 2], right = [7, 3, 6]\n",
-      "\n",
-      "left = [1], right = [4, 2]\n",
-      "\n",
-      "left = [4], right = [2]\n",
-      "merge_list = [2, 4]\n",
-      "merge_list = [1, 2, 4]\n",
-      "\n",
-      "left = [7], right = [3, 6]\n",
-      "\n",
-      "left = [3], right = [6]\n",
-      "merge_list = [3, 6]\n",
-      "merge_list = [3, 6, 7]\n",
-      "merge_list = [1, 2, 3, 4, 6, 7]\n",
-      "\n",
-      "<< find index >>\n",
-      "original: left = 0, right = 5\n",
-      "( (nums[left] = 1) + (nums[right] = 7) = 8 ) > ( target = 6 )\n",
-      "new: left = 0, right = 4\n",
-      "\n",
-      "original: left = 0, right = 4\n",
-      "( (nums[left] = 1) + (nums[right] = 6) = 7 ) > ( target = 6 )\n",
-      "new: left = 0, right = 3\n",
-      "\n",
-      "original: left = 0, right = 3\n",
-      "( (nums[left] = 1) + (nums[right] = 4) = 5 ) < ( target = 6 )\n",
-      "new: left = 1, right = 3\n",
-      "\n",
-      "end: ( (nums[left] = 2) + (nums[right] = 4) = 6 ) == ( target = 6 )\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "        return res\n",
+    "\n",
+    "\n",
     "nums = [1, 4, 2, 7, 3, 6]\n",
     "target = 6\n",
     "Solution().twoSum(nums, target)"
