--- a/15. 3Sum.ipynb
+++ b/15. 3Sum.ipynb
@@ -9,34 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Given an integer array nums, return all the triplets [nums[i], nums[j], nums[k]] such that i != j, i != k, and j != k, and nums[i] + nums[j] + nums[k] == 0.\n",
-    "\n",
-    "# Notice that the solution set must not contain duplicate triplets.\n",
-    "\n",
-    "# Input: nums = [-1,0,1,2,-1,-4]\n",
-    "# Output: [[-1,-1,2],[-1,0,1]]\n",
-    "# Explanation: \n",
-    "# nums[0] + nums[1] + nums[2] = (-1) + 0 + 1 = 0.\n",
-    "# nums[1] + nums[2] + nums[4] = 0 + 1 + (-1) = 0.\n",
-    "# nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0.\n",
-    "# The distinct triplets are [-1,0,1] and [-1,-1,2].\n",
-    "# Notice that the order of the output and the order of the triplets does not matter.\n",
-    "\n",
-    "# Input: nums = [0,1,1]\n",
-    "# Output: []\n",
-    "# Explanation: The only possible triplet does not sum up to 0.\n",
-    "\n",
-    "# Input: nums = [0,0,0]\n",
-    "# Output: [[0,0,0]]\n",
-    "# Explanation: The only possible triplet sums up to 0."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -48,8 +20,8 @@
     "\n",
     "        res = []\n",
     "        for i in range(len(nums)-2):\n",
-    "            print(f\"{'-'*100}\")\n",
-    "            if (i == 0) or(nums[i] != nums[i-1]):\n",
+    "            print(f\"{'-'*100}\") \n",
+    "            if (i == 0) or (nums[i] != nums[i-1]): # 第一個元素前面沒有值可以比較，單設一個條件；該元素與前一元素不相同時，才可進入while迴圈查找組合，避免出現重複的組合\n",
     "                left = i + 1\n",
     "                right = len(nums) - 1\n",
     "                print(f\"i = {i}, left = {left}, right = {right}\")\n",
@@ -65,9 +37,9 @@
     "                    res.append([nums[i], nums[left], nums[right]])\n",
     "                    print(f\"res = {res}\")\n",
     "\n",
-    "                    while (left < right) and (nums[left+1] == nums[left]):\n",
+    "                    while (left < right) and (nums[left+1] == nums[left]): # 該元素與前一元素相同時，即跳過，避免出現重複的組合\n",
     "                        left += 1\n",
-    "                    while (left < right) and nums[right-1] == nums[right]:\n",
+    "                    while (left < right) and nums[right-1] == nums[right]: # 該元素與前一元素相同時，即跳過，避免出現重複的組合\n",
     "                        right -= 1\n",
     "\n",
     "                    left += 1\n",
