update bfs, dfs

--- a/200. Number of Islands.ipynb
+++ b/200. Number of Islands.ipynb
@@ -10,7 +10,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numIslands(self, grid):\n",
+    "        print(f\"grid = {grid}\")\n",
+    "        count = 0  # 島嶼的數量\n",
+    "        for r in range(len(grid)):\n",
+    "            for c in range(len(grid[0])):\n",
+    "                if grid[r][c] == \"1\":  # 如果當前位置為島嶼（\"1\"代表島嶼）\n",
+    "                    self.dfs(r, c, grid) # 呼叫dfs方法進行深度優先搜索\n",
+    "                    count += 1  # 跳出dfs表示已找完一片島嶼\n",
+    "                    print(f\"count = {count}\\n\") \n",
+    "        return count\n",
+    "    \n",
+    "    def dfs(self, r, c, grid):\n",
+    "        print(f\"r = {r}, c = {c}\")        \n",
+    "        print(f\"-> grid[r][c] = {grid[r][c]}\")\n",
+    "        grid[r][c] = \"#\"  # 將目前座標位置的值改為'#'（表示與該島與相連）\n",
+    "        print(f\"-> change: grid = {grid}\")\n",
+    "\n",
+    "        directions = [(0, 1), (0, -1), (-1, 0), (1, 0)] # 上、下、左、右\n",
+    "        for d in directions:\n",
+    "            nr, nc = r + d[0], c + d[1] # 計算新的座標位置\n",
+    "            # 如果當前位置不超出範圍且是島嶼\n",
+    "            if (nr >= 0) and (nc >= 0) and (nr < len(grid)) and (nc < len(grid[0])) and (grid[nr][nc] == \"1\"):\n",
+    "                self.dfs(nr, nc, grid)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grid = [['1', '1', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 0, c = 0\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '1', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 0, c = 1\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 0, c = 2\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 1, c = 1\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '1'], ['1', '#', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 1, c = 0\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 2, c = 0\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['#', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 2, c = 1\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "count = 1\n",
+      "\n",
+      "r = 0, c = 4\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "count = 2\n",
+      "\n",
+      "r = 2, c = 3\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '1'], ['0', '0', '0', '1', '1']]\n",
+      "r = 2, c = 4\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '1', '1']]\n",
+      "r = 3, c = 4\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '1', '#']]\n",
+      "r = 3, c = 3\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '#', '#']]\n",
+      "count = 3\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"1\",\"0\",\"1\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"1\",\"1\"],\n",
+    "  [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
+    "]\n",
+    "Solution().numIslands(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "class Solution:    \n",
+    "    def numIslands(self, grid):\n",
+    "        print(f\"init: grid = {grid}\\n\")\n",
+    "        count = 0  # 島嶼的數量\n",
+    "        for r in range(len(grid)):\n",
+    "            for c in range(len(grid[0])):\n",
+    "                if grid[r][c] == \"1\":  # 如果當前位置為島嶼（\"1\"代表島嶼）\n",
+    "                    self.bfs(grid, r, c) # 呼叫bfs方法進行廣度優先搜索\n",
+    "                    count += 1  # 跳出bfs表示已找完一片島嶼\n",
+    "                    print(f\"count = {count}\\n{'-'*60}\") \n",
+    "        return count\n",
+    "\n",
+    "    def bfs(self, grid, r, c):\n",
+    "        queue = collections.deque() # 創建一個空的雙向隊列\n",
+    "        queue.append((r, c)) # 將起始位置的座標加入隊列中\n",
+    "\n",
+    "        print(f\"queue = {queue}\")\n",
+    "        print(f\"r = {r}, c = {c}\")\n",
+    "        print(f\"-> grid[r][c] = {grid[r][c]}\")\n",
+    "        grid[r][c] = '#'  # 將目前座標位置的值改為'#'（表示與該島與相連）\n",
+    "        print(f\"-> change: grid = {grid}\")\n",
+    "\n",
+    "        while queue:\n",
+    "            directions = [(0, 1), (0, -1), (-1, 0), (1, 0)] # 上、下、左、右\n",
+    "            r, c = queue.popleft() # 從隊列中取出一個座標作為目前位置\n",
+    "            print(f\"\\nr = {r}, c = {c}\")\n",
+    "            for d in directions:\n",
+    "                nr, nc = r + d[0], c + d[1] # 計算新的座標位置\n",
+    "                print(f\"nr = {nr}, c = {nc}\")\n",
+    "                # 如果當前位置不超出範圍且是島嶼\n",
+    "                if (nr >= 0) and (nc >= 0) and (nr < len(grid)) and (nc < len(grid[0])) and (grid[nr][nc] == \"1\"):\n",
+    "                    queue.append((nr, nc)) # 將新的座標加入隊列中\n",
+    "                    \n",
+    "                    print(f\"--> grid[nr][nc] = {grid[nr][nc]}\")\n",
+    "                    grid[nr][nc] = '#' # 將目前座標位置的值改為'#'（表示與該島與相連\n",
+    "                    print(f\"--> change: grid = {grid}\")\n",
+    "                    print(f\"--> change: queue = {queue}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init: grid = [['1', '1', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "\n",
+      "queue = deque([(0, 0)])\n",
+      "r = 0, c = 0\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '1', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "\n",
+      "r = 0, c = 0\n",
+      "nr = 0, c = 1\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '1', '0', '1'], ['1', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(0, 1)])\n",
+      "nr = 0, c = -1\n",
+      "nr = -1, c = 0\n",
+      "nr = 1, c = 0\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '1', '0', '1'], ['#', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(0, 1), (1, 0)])\n",
+      "\n",
+      "r = 0, c = 1\n",
+      "nr = 0, c = 2\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '1'], ['#', '1', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(1, 0), (0, 2)])\n",
+      "nr = 0, c = 0\n",
+      "nr = -1, c = 1\n",
+      "nr = 1, c = 1\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['1', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(1, 0), (0, 2), (1, 1)])\n",
+      "\n",
+      "r = 1, c = 0\n",
+      "nr = 1, c = 1\n",
+      "nr = 1, c = -1\n",
+      "nr = 0, c = 0\n",
+      "nr = 2, c = 0\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['#', '1', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(0, 2), (1, 1), (2, 0)])\n",
+      "\n",
+      "r = 0, c = 2\n",
+      "nr = 0, c = 3\n",
+      "nr = 0, c = 1\n",
+      "nr = -1, c = 2\n",
+      "nr = 1, c = 2\n",
+      "\n",
+      "r = 1, c = 1\n",
+      "nr = 1, c = 2\n",
+      "nr = 1, c = 0\n",
+      "nr = 0, c = 1\n",
+      "nr = 2, c = 1\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '1'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(2, 0), (2, 1)])\n",
+      "\n",
+      "r = 2, c = 0\n",
+      "nr = 2, c = 1\n",
+      "nr = 2, c = -1\n",
+      "nr = 1, c = 0\n",
+      "nr = 3, c = 0\n",
+      "\n",
+      "r = 2, c = 1\n",
+      "nr = 2, c = 2\n",
+      "nr = 2, c = 0\n",
+      "nr = 1, c = 1\n",
+      "nr = 3, c = 1\n",
+      "count = 1\n",
+      "------------------------------------------------------------\n",
+      "queue = deque([(0, 4)])\n",
+      "r = 0, c = 4\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '1', '1'], ['0', '0', '0', '1', '1']]\n",
+      "\n",
+      "r = 0, c = 4\n",
+      "nr = 0, c = 5\n",
+      "nr = 0, c = 3\n",
+      "nr = -1, c = 4\n",
+      "nr = 1, c = 4\n",
+      "count = 2\n",
+      "------------------------------------------------------------\n",
+      "queue = deque([(2, 3)])\n",
+      "r = 2, c = 3\n",
+      "-> grid[r][c] = 1\n",
+      "-> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '1'], ['0', '0', '0', '1', '1']]\n",
+      "\n",
+      "r = 2, c = 3\n",
+      "nr = 2, c = 4\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '1', '1']]\n",
+      "--> change: queue = deque([(2, 4)])\n",
+      "nr = 2, c = 2\n",
+      "nr = 1, c = 3\n",
+      "nr = 3, c = 3\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '#', '1']]\n",
+      "--> change: queue = deque([(2, 4), (3, 3)])\n",
+      "\n",
+      "r = 2, c = 4\n",
+      "nr = 2, c = 5\n",
+      "nr = 2, c = 3\n",
+      "nr = 1, c = 4\n",
+      "nr = 3, c = 4\n",
+      "--> grid[nr][nc] = 1\n",
+      "--> change: grid = [['#', '#', '#', '0', '#'], ['#', '#', '0', '0', '0'], ['#', '#', '0', '#', '#'], ['0', '0', '0', '#', '#']]\n",
+      "--> change: queue = deque([(3, 3), (3, 4)])\n",
+      "\n",
+      "r = 3, c = 3\n",
+      "nr = 3, c = 4\n",
+      "nr = 3, c = 2\n",
+      "nr = 2, c = 3\n",
+      "nr = 4, c = 3\n",
+      "\n",
+      "r = 3, c = 4\n",
+      "nr = 3, c = 5\n",
+      "nr = 3, c = 3\n",
+      "nr = 2, c = 4\n",
+      "nr = 4, c = 4\n",
+      "count = 3\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"1\",\"0\",\"1\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"1\",\"1\"],\n",
+    "  [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
+    "]\n",
+    "Solution().numIslands(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +337,7 @@
     "        \n",
     "        print(f\"-> grid[r][c] = {grid[r][c]}\")\n",
     "\n",
-    "        grid[r][c] = \"#\"  # 將當前位置標記為已訪問（使用\"#\"表示）\n",
+    "        grid[r][c] = \"#\"  # 將目前座標位置的值改為'#'（表示與該島與相連）\n",
     "        print(f\"-> change: grid = {grid}\")\n",
     "\n",
     "        self.dfs(r-1, c, grid)  # 上\n",
@@ -44,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +445,7 @@
        "3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
