--- a/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
+++ b/105. Construct Binary Tree from Preorder and Inorder Traversal.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "preorder: 根節點、左節點、右節點  \n",
+    "inorder: 左節點、根節點、右節點"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,33 +35,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
     "class Solution:\n",
     "    def buildTree(self, preorder, inorder):\n",
-    "        # 建立一個字典來映射中序遍歷中每個節點的值到其索引\n",
-    "        self.in_index_map = dict(map(reversed, enumerate(inorder)))\n",
-    "        \n",
-    "        # 調用 build_tree 函數來構建二叉樹，初始設置 pre_start 為 0，in_start 為 0，in_end 為中序遍歷的長度，preorder 為前序遍歷列表\n",
-    "        ans = self.build_tree(0, 0, len(inorder), preorder)\n",
-    "        # 返回構建好的二叉樹的根節點\n",
-    "        return ans[0]\n",
+    "        print(f\"preorder = {preorder}\")\n",
+    "        print(f\"inorder = {inorder}\")\n",
     "\n",
-    "    def build_tree(self, pre_start, in_start, in_end, preorder):\n",
-    "        # 如果中序遍歷的起始索引大於等於結束索引，表示子樹為空，返回 None 以及 pre_start\n",
-    "        if in_start >= in_end:\n",
-    "            return None, pre_start\n",
+    "        # 建立一個字典來映射inorder遍歷中每個節點的值和索引\n",
+    "        # enumerate(inorder) 返回 (索引, 節點值) \n",
+    "        # 使用 reversed 將 (索引, 節點值) 轉為 (節點值, 索引)\n",
+    "        self.inorder_index_map = dict(map(reversed, enumerate(inorder)))\n",
+    "        print(f\"inorder_index_map = {self.inorder_index_map}\")\n",
+    "\n",
+    "        # 調用 build_tree 函數來構建二叉樹，初始設置 preorder_start 為 0，inorder_start 為 0，inorder_end 為inorder遍歷的長度\n",
+    "        ans, _ = self.dfs(0, 0, len(inorder), preorder)\n",
+    "\n",
+    "        # 返回構建好的二叉樹的根節點\n",
+    "        return ans\n",
+    "\n",
+    "    def dfs(self, preorder_start, inorder_start, inorder_end, preorder):\n",
+    "        print(\"-\" * 150)\n",
+    "        print(f\"preorder_start = {preorder_start}, inorder_start = {inorder_start}, inorder_end = {inorder_end}\")\n",
+    "\n",
+    "        # 如果inorder的起始索引>=結束索引，表示子樹為空，返回 None 以及 preorder_start\n",
+    "        if inorder_start >= inorder_end:\n",
+    "            print(f\"- (inorder_start = {inorder_start}) >= (inorder_end = {inorder_end})\")\n",
+    "            print(f\"- return None, {preorder_start}\")\n",
+    "            return None, preorder_start\n",
     "        \n",
-    "        # 從前序遍歷中取得根節點的值\n",
-    "        root_val = preorder[pre_start]\n",
-    "        # 使用字典查找中序遍歷中根節點的索引\n",
-    "        root_index = self.in_index_map[root_val]\n",
+    "\n",
+    "        # 從preorder中取得根節點的值\n",
+    "        root_val = preorder[preorder_start]\n",
+    "        print(f\"root_val = preorder[{preorder_start}] = {root_val}\")\n",
+    "\n",
+    "        # 查找inorder中根節點的索引\n",
+    "        root_index = self.inorder_index_map[root_val]\n",
+    "        print(f\"root_index = inorder_index_map[{root_val}] = {root_index}\")\n",
+    "\n",
     "        \n",
-    "        # 遞歸構建左子樹，pre_end 用於確定右子樹的起始位置\n",
-    "        l_tree, pre_end = self.build_tree(pre_start + 1, in_start, root_index, preorder)\n",
-    "        # 遞歸構建右子樹，pre_end 會被更新以反映左子樹的結束位置\n",
-    "        r_tree, pre_end = self.build_tree(pre_end, root_index + 1, in_end, preorder)\n",
+    "        # (preorder: 根節點、左節點、右節點; inorder: 左節點、根節點、右節點)\n",
+    "        # preorder根節點的後面接的是左節點，依序遍歷，但不能遍歷到右節點。而找到inorder根節點的索引後，根節點的前面接的是左節點，所以inorder_end為inorder根節點的索引。\n",
+    "        # 遞迴構建左子樹，preorder_end 用於確定右子樹在preorder的起始索引，確保左子樹在preorder中的範圍是 [(preorder_start + 1) : preorder_end]。\n",
+    "        print(f\"{root_val} - left\")\n",
+    "        print(f\"preorder_start = (preorder_start + 1) = ({preorder_start} + 1), inorder_start = {inorder_start}, inorder_end = root_index = {root_index}\")\n",
+    "        left, preorder_end = self.dfs(preorder_start + 1, inorder_start, root_index, preorder)\n",
+    "        print(f\"{root_val} - left = {left}, preorder_end(右子樹的起始位置) = {preorder_end}\")\n",
+    "\n",
+    "        # (preorder: 根節點、左節點、右節點; inorder: 左節點、根節點、右節點)\n",
+    "        # preorder左節點的後面接的是右節點，依序遍歷，但不能遍歷到下一個根節點。而找到inorder根節點的索引後，根節點的後面接的是右節點，所以inorder_start為inorder根節點的索引+1。\n",
+    "        # 遞迴構建右子樹，preorder_end 會被更新以反映左子樹的結束位置，確保右子樹接在左子樹的後面，且在preorder中的範圍是 [preorder_end, ...]\n",
+    "        print(f\"{root_val} - right\")\n",
+    "        print(f\"preorder_start = preorder_end = {preorder_end}, inorder_start = (root_index + 1) = ({root_index} + 1), inorder_end = {inorder_end}\")\n",
+    "        right, preorder_end = self.dfs(preorder_end, root_index + 1, inorder_end, preorder)\n",
+    "        print(f\"{root_val} - right = {right}, preorder_end(右子樹的起始位置) = {preorder_end}\")\n",
+    "        print(f\"{root_val} - left  = {left}\")\n",
     "        \n",
-    "        # 返回構建好的二叉樹節點以及更新後的 pre_end\n",
-    "        return TreeNode(root_val, l_tree, r_tree), pre_end"
+    "\n",
+    "        # 返回構建好的二叉樹節點以及更新後的 preorder_end\n",
+    "        print(f\"- return {TreeNode(root_val, left, right)}, {preorder_end}\")\n",
+    "        return TreeNode(root_val, left, right), preorder_end"
    ]
   },
   {
@@ -62,9 +107,102 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preorder = [3, 9, 20, 15, 7]\n",
+      "inorder = [9, 3, 15, 20, 7]\n",
+      "inorder_index_map = {9: 0, 3: 1, 15: 2, 20: 3, 7: 4}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 0, inorder_start = 0, inorder_end = 5\n",
+      "root_val = preorder[0] = 3\n",
+      "root_index = inorder_index_map[3] = 1\n",
+      "3 - left\n",
+      "preorder_start = (preorder_start + 1) = (0 + 1), inorder_start = 0, inorder_end = root_index = 1\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 1, inorder_start = 0, inorder_end = 1\n",
+      "root_val = preorder[1] = 9\n",
+      "root_index = inorder_index_map[9] = 0\n",
+      "9 - left\n",
+      "preorder_start = (preorder_start + 1) = (1 + 1), inorder_start = 0, inorder_end = root_index = 0\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 2, inorder_start = 0, inorder_end = 0\n",
+      "- (inorder_start = 0) >= (inorder_end = 0)\n",
+      "- return None, 2\n",
+      "9 - left = None, preorder_end(右子樹的起始位置) = 2\n",
+      "9 - right\n",
+      "preorder_start = preorder_end = 2, inorder_start = (root_index + 1) = (0 + 1), inorder_end = 1\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 2, inorder_start = 1, inorder_end = 1\n",
+      "- (inorder_start = 1) >= (inorder_end = 1)\n",
+      "- return None, 2\n",
+      "9 - right = None, preorder_end(右子樹的起始位置) = 2\n",
+      "9 - left  = None\n",
+      "- return <__main__.TreeNode object at 0x000002A6930DC400>, 2\n",
+      "3 - left = <__main__.TreeNode object at 0x000002A6930DC400>, preorder_end(右子樹的起始位置) = 2\n",
+      "3 - right\n",
+      "preorder_start = preorder_end = 2, inorder_start = (root_index + 1) = (1 + 1), inorder_end = 5\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 2, inorder_start = 2, inorder_end = 5\n",
+      "root_val = preorder[2] = 20\n",
+      "root_index = inorder_index_map[20] = 3\n",
+      "20 - left\n",
+      "preorder_start = (preorder_start + 1) = (2 + 1), inorder_start = 2, inorder_end = root_index = 3\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 3, inorder_start = 2, inorder_end = 3\n",
+      "root_val = preorder[3] = 15\n",
+      "root_index = inorder_index_map[15] = 2\n",
+      "15 - left\n",
+      "preorder_start = (preorder_start + 1) = (3 + 1), inorder_start = 2, inorder_end = root_index = 2\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 4, inorder_start = 2, inorder_end = 2\n",
+      "- (inorder_start = 2) >= (inorder_end = 2)\n",
+      "- return None, 4\n",
+      "15 - left = None, preorder_end(右子樹的起始位置) = 4\n",
+      "15 - right\n",
+      "preorder_start = preorder_end = 4, inorder_start = (root_index + 1) = (2 + 1), inorder_end = 3\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 4, inorder_start = 3, inorder_end = 3\n",
+      "- (inorder_start = 3) >= (inorder_end = 3)\n",
+      "- return None, 4\n",
+      "15 - right = None, preorder_end(右子樹的起始位置) = 4\n",
+      "15 - left  = None\n",
+      "- return <__main__.TreeNode object at 0x000002A6930DC610>, 4\n",
+      "20 - left = <__main__.TreeNode object at 0x000002A6930DC610>, preorder_end(右子樹的起始位置) = 4\n",
+      "20 - right\n",
+      "preorder_start = preorder_end = 4, inorder_start = (root_index + 1) = (3 + 1), inorder_end = 5\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 4, inorder_start = 4, inorder_end = 5\n",
+      "root_val = preorder[4] = 7\n",
+      "root_index = inorder_index_map[7] = 4\n",
+      "7 - left\n",
+      "preorder_start = (preorder_start + 1) = (4 + 1), inorder_start = 4, inorder_end = root_index = 4\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 5, inorder_start = 4, inorder_end = 4\n",
+      "- (inorder_start = 4) >= (inorder_end = 4)\n",
+      "- return None, 5\n",
+      "7 - left = None, preorder_end(右子樹的起始位置) = 5\n",
+      "7 - right\n",
+      "preorder_start = preorder_end = 5, inorder_start = (root_index + 1) = (4 + 1), inorder_end = 5\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "preorder_start = 5, inorder_start = 5, inorder_end = 5\n",
+      "- (inorder_start = 5) >= (inorder_end = 5)\n",
+      "- return None, 5\n",
+      "7 - right = None, preorder_end(右子樹的起始位置) = 5\n",
+      "7 - left  = None\n",
+      "- return <__main__.TreeNode object at 0x000002A6930DC640>, 5\n",
+      "20 - right = <__main__.TreeNode object at 0x000002A6930DC640>, preorder_end(右子樹的起始位置) = 5\n",
+      "20 - left  = <__main__.TreeNode object at 0x000002A6930DC610>\n",
+      "- return <__main__.TreeNode object at 0x000002A6930DC670>, 5\n",
+      "3 - right = <__main__.TreeNode object at 0x000002A6930DC670>, preorder_end(右子樹的起始位置) = 5\n",
+      "3 - left  = <__main__.TreeNode object at 0x000002A6930DC400>\n",
+      "- return <__main__.TreeNode object at 0x000002A6930DC1F0>, 5\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<__main__.TreeNode at 0x27be08b99f0>"
+       "<__main__.TreeNode at 0x2a6930dc1f0>"
       ]
      },
      "execution_count": 3,
@@ -78,10 +216,6 @@
     "inorder  = [9,3,15,20,7]\n",
     "# Output: [3,9,20,null,null,15,7]\n",
     "\n",
-    "# Input:\n",
-    "preorder = [-1]\n",
-    "inorder  = [-1]\n",
-    "# Output: [-1]\n",
     "Solution().buildTree(preorder, inorder)"
    ]
   }
@@ -102,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
