--- a/108. Convert Sorted Array to Binary Search Tree.ipynb
+++ b/108. Convert Sorted Array to Binary Search Tree.ipynb
@@ -16,29 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "# class TreeNode(object):\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Solution(object):\n",
-    "    def sortedArrayToBST(self, nums):\n",
-    "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :rtype: TreeNode\n",
-    "        \"\"\"\n",
-    "        # class TreeNode:\n",
-    "        #     def __init__(self, x):\n",
-    "        #         self.val = x\n",
-    "        #         self.left = None\n",
-    "        #         self.right = None\n",
-    "        \n",
-    "        \n",
+    "    def sortedArrayToBST(self, nums):    \n",
     "        if not nums:\n",
     "            return None\n",
     "        \n",
@@ -52,8 +49,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
